--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
-
+.hexbin-hexagon {
+    stroke: white;
+    stroke-width: 1px;
+}
 
 text {
 	font-family: Prociono;
@@ -11,15 +14,50 @@ text {
 
 path {
   stroke: #fff;
-  stroke-width: 1.5px;
+  stroke-width: 0.5 px;
 }
 
 path:hover {
-	fill: yellow;
+    fill: yellow;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    width: 250px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
 }
 
 #sliderContainer {
-		width:250px;
+        width:250px;
     text-align: center;
 }
 
@@ -46,13 +84,13 @@ path:hover {
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
-    background: red; /* Green background */
+    background: steelblue; /* Blue background */
     cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
-    background: red; /* Green background */
+    background: steelblue; /* Blue background */
     cursor: pointer; /* Cursor on hover */
 }
