--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,34 @@
     fill-opacity:0.8;
 }
 
+.container{
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 10px;
+}
 
 text {
-	font-family: Prociono;
+    font-family: Prociono;
+}
+
+h3 {
+    font-family: Prociono;
 }
 
 #map {
-	width: 500px;
-	height: 500px;
+    margin-left: 20px;
+    margin-top: 50px;
+    width: 600px;
+    height: 600px;
+    float:left;
+}
+
+#comparison{
+    margin-right: 20px;
+    margin-top: 50px;
+    width: 600px;
+    height: 600px;
+    float: right;
 }
 
 .leaflet-overlay-pane svg path{
@@ -20,22 +40,18 @@ text {
 
 path {
   stroke: #fff;
-  stroke-width: 1 px;
+  stroke-width: 2px;
 }
 
 path:hover {
     fill: yellow;
 }
 
+
 #info{
     width: 500px;
     height: 50px;
-}
-
-#comparison{
-    width: 500px;
-    height: 500px;
-    background: yellow;
+    text-align: center;
 }
 
 .frequencyLine {
@@ -51,43 +67,93 @@ path:hover {
   stroke-width: 2px;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-    width: 250px;
+.responseLine {
+  fill: none;
+  stroke: black;
+  stroke-width: 2px;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
+
+.averageResponseLine {  
+  fill: none;
+  stroke: red;
+  stroke-width: 2px;
+}
+
+
+/* Top navi bar */
+h1 { 
+    margin-left: 10px;
+    margin-top: 25px;
     float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    display: inline-block;
 }
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Add an active class to highlight the current page */
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
+/* common and top level styles */
+#nav span {
     display: none;
 }
+#nav, #nav ul {
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+}
+#nav {
+    background-color: #F5F5F5;
+    border-bottom: 5px solid #333333;
+    float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+    position: relative;
+    width: 98%;
+}
+
+#nav > li {
+    border-bottom: 5px solid transparent;
+    float: right;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: -5px;
+    text-align: left;
+    -moz-transition: all 300ms ease-in-out 0s;
+    -ms-transition: all 300ms ease-in-out 0s;
+    -o-transition: all 300ms ease-in-out 0s;
+    -webkit-transition: all 300ms ease-in-out 0s;
+    transition: all 300ms ease-in-out 0s;
+}
+#nav li a {
+    margin-top: 25px;
+    display: block;
+    text-decoration: none;
+    -moz-transition: color 450ms ease-in-out 0s, background-color 450ms ease-in-out 0s;
+    -ms-transition: color 450ms ease-in-out 0s, background-color 450ms ease-in-out 0s;
+    -o-transition: color 450ms ease-in-out 0s, background-color 450ms ease-in-out 0s;
+    -webkit-transition: color 450ms ease-in-out 0s, background-color 450ms ease-in-out 0s;
+    transition: color 450ms ease-in-out 0s, background-color 450ms ease-in-out 0s;
+    white-space: normal;
+}
+#nav > li > a {
+    color: #333333;
+    display: block;
+    font-size: 1.3em;
+    line-height: 49px;
+    padding: 0 15px;
+    text-transform: uppercase;
+}
+#nav > li:hover > a, #nav > a:hover {
+    background-color: #F55856;
+    color: #FFFFFF;
+}
+#nav li.active > a {
+    background-color: #333333;
+    color: #FFFFFF;
+}
+
 
 #sliderContainer {
-        width:250px;
+    margin-top: 100px;
+    margin-bottom: -20px;
+    margin-left:1%;
+    width:250px;
     text-align: center;
 }
 
@@ -96,7 +162,7 @@ path:hover {
     appearance: none;
     width: 100%; /* Full-width */
     height: 25px; /* Specified height */
-    background: #d3d3d3; /* Grey background */
+    background: #F5F5F5; /* Grey background */
     outline: none; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -114,13 +180,13 @@ path:hover {
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
-    background: steelblue; /* Blue background */
+    background: #F55856; /* Blue background */
     cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
-    background: steelblue; /* Blue background */
+    background: #F55856; /* Blue background */
     cursor: pointer; /* Cursor on hover */
 }
